fix: cookie content scroll only on overflow

--- a/components/o-cookie-message/src/scss/_mixins.scss
+++ b/components/o-cookie-message/src/scss/_mixins.scss
@@ -67,7 +67,7 @@
 
 	.o-cookie-message__content-outer {
 		max-height: 50vh;
-		overflow: scroll;
+		overflow: auto;
 	}
 
 	.o-cookie-message__content {
